@@ -1,3 +1,8 @@
+Sun May 17 16:18:08 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/Options.java: cbc --dump-* did not
+	  work.
+
 Sat May 16 18:10:31 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: fix typo.
